Shrinking all the things with normal-sized bibliography

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -22,7 +22,8 @@ To generate attractive pattern colorings, a reasonable first step is to enforce 
 \includegraphics[width=.2\columnwidth]{figs/colorCompat/r_1_3_3-39}\\
 3.74&3.42&3.66&3.39\\
 \end{tabular}
-\caption{Patterns whose colors receive high scores under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. The score is shown beneath each pattern; a typical pattern scores between 2 and 4.}% Many results exhibit problems such as adjacent equi-luminant regions and excessively saturated backgrounds.}
+\caption{Patterns whose colors receive high scores under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. The score is shown beneath each pattern; a typical pattern scores between 2 and 4. Many results exhibit problems such as adjacent equi-luminant regions and excessively saturated backgrounds.}
+\vspace{-1.0em}
 \label{fig:ColorCompatOnly}
 \end{figure}
 
