--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -18,7 +18,7 @@ Figure ~\ref{fig:study} shows the percentage of suggestions from each source tha
 
 \begin{figure}[h!]
   \begin{center}
-  \includegraphics[width=\columnwidth]{figs/evaluation.png}
+  \includegraphics[width=\columnwidth]{figs/evaluation-small.png}
 	\end{center}
 \caption{The percentage of times that \artistSource-created, \modelSource-generated, \compatSource-only, and \randomSource~patterns were chosen by participants as one of their `Top 4' favorite or `Bottom 4' least favorite patterns in our online experiment.}
 
