--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -168,7 +168,7 @@
 \input{acknowledgments.tex}
 
 \bibliographystyle{acmsiggraph}
-\small
+%\small
 \bibliography{patternColoring}
 
 \end{document}
