--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -10,7 +10,7 @@ Addressing a problem similar to ours, Sauvaget and colleagues describe a system 
 In the theme of user exploration, Meier and colleagues develop a suite of interactive interfaces to help users browse color themes and experiment with compositions~\shortcite{ColorPaletteTools}. However, they do not focus on algorithms for generating coloring suggestions. In this paper, we explore generating suggestions while considering user input.
 
 \paragraph{Color harmony \& compatibility}
-Computer graphics, aesthetics, and psychology research has introduced theories and models to predict the compatibility of two or more colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference,Itten}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}.
+Computer graphics, aesthetics, and psychology research has introduced theories and models to predict the compatibility of colors~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference,Itten}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}.
 %This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme.
 Our model includes this compatibility function. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model also uses the distinguishing spatial features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
 
