--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -38,12 +38,13 @@ For a particular pair of adjacent segments $(\segment, \segprime)$ and a color p
 %%
 where $\adjStrength(\segment,\segprime)$ is the \emph{strength} of the adjacency $(\segment,\segprime)$. We define adjacency strength as the number of pixels from segments $\segment$ or $\segprime$ that are within a 2-pixel distance from their perimeters. All adjacency strengths in a given pattern are normalized to sum to 1. We learn the distributions $p$ using the `histogram regression' approach described in Section~\ref{sec:unary}. This function scores how well a color assignment fits an adjacency according to color property $\prop$.
 
-Figure~\ref{fig:binaryHistograms} shows predicted distributions over relative lightness for two different adjacent segment pairs. The two distributions are similar in shape and reflect the intuition that no two adjacent segments should be completely equi-luminant. However, the adjacency between the foreground flower and the background concentrates more of its mass toward higher lightness differences. Together, these two distributions suggest that foreground-background adjacencies should exhibit more lightness contrast than foreground-foreground adjacencies.
+Figure~\ref{fig:binaryHistograms} shows predicted distributions over relative lightness for different adjacent segment pairs. The two distributions are similar in shape and reflect the intuition that no two adjacent segments should be equi-luminant. However, the adjacency between the foreground flower and the background concentrates more mass toward higher lightness differences. Together, these two distributions suggest that foreground-background adjacencies should exhibit more lightness contrast than foreground-foreground adjacencies.
 
 \begin{figure}[ht]
+\centering
 \begin{tabular}{cc}
-{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/ff}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundAdjacencyHistogram2}\vspace{0.5em}\\
-{\raisebox{4em}{\includegraphics[width=.25\columnwidth]{figs/histograms/fb}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundBackgroundAdjacencyHistogram2}\vspace{0.5em}\\
+{\raisebox{2.5em}{\includegraphics[width=.25\columnwidth]{figs/histograms/ff}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundAdjacencyHistogram-small}\vspace{0.5em}\\
+{\raisebox{2.5em}{\includegraphics[width=.25\columnwidth]{figs/histograms/fb}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundBackgroundAdjacencyHistogram-small}\vspace{0.5em}\\
 \end{tabular}
 
 \caption{Predicted distributions over relative lightness for two different segment adjacencies (participating segments higlighted in orange and green). A value of 0 indicates identical lightness. The foreground-foreground distribution permits more similar lightness values than the foreground-background disribution.}
