--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -152,15 +152,12 @@ Artist A&Artist B\\
 
 \subsection{Applications}
 
-Next, we show how our model can be applied to different pattern coloring tasks, such as coloring in webpage backgrounds, suggesting clothing colorings to fit people with different physical attributes, and coordinating colors in interior scene design.
+Next, we show how our model can be applied to different pattern coloring tasks, such as coordinating colors in interior scene design, coloring in webpage backgrounds, and suggesting clothing colorings to fit people with different physical attributes.
 
-\begin{figure}[ht]
-\centering
-\includegraphics[width=\columnwidth]{figs/webpageRecoloring}
-\caption{With a few additional factors, our model can recolor the background pattern of a web page to match the colors in the page body.}
-\label{fig:webpageRecoloring}
-\vspace{-1.0em}
-\end{figure}
+\paragraph{3D scene design}
+Color-coordinating a virtual scene is another creative task that can benefit from computatational support. While repositories such as the 3D Warehouse provide a wealth of object models with which to build scenes, such models are rarely color coordinated with one another. Figure~\ref{fig:sceneRecoloring} shows how our model can make coordinating object colors easier. We can treat a scene as a recolorable pattern by rendering its material coefficients to an image. The user then provides a few additional annotations to specify which object components should be the same color; in this example, cushions, pillows, and wooden objects must take the same color. Finally, we add a factor to our model to enforce that the colors assigned to each component are similar to their original colors (see Equation~\ref{eq:targetFactor}) to keep the system from wandering into physically implausible colorings. The resulting model suggests plausible, improved recolorings of the scene.
+Recent related work transfers material properties from photographs to 3D scenes~\cite{MaterialStyleTransfer}; the objective functions used in this system could be adapted to soft constraints in our framework.
+%Our model's applicability to this task, despite it being trained only on \emph{2D} patterns, suggests that it captures some simple cross-domain aesthetic principles.
 
 \paragraph{Web design}
 A web designer may want to change a web page's color theme to fit the season, a special event, or even the time of day. Our model can support these tasks by suggesting recolorings for web page pattern elements. In Figure~\ref{fig:webpageRecoloring}, the background pattern of a blog is automatically recolored in three distinct styles. Each style is defined by a manually-specified page body color and header text color. We generate these recolorings by adding new factors to the model. First, we add a unary factor to each color variable that encourages similarity to a color that occurs in the web page body:
@@ -179,25 +176,9 @@ We also add a factor to the pattern's background color group that penalizes simi
 This term ensures that the body of the page does not blend into the patterned background. A more sophisticated approach would treat the entire web page as a pattern and perform joint recoloring; we leave this extension to future work.
 
 
-
-
 \paragraph{Fashion design}
 Our model can also adapt the colorings of clothing items to fit different people. Figure~\ref{fig:fashion} shows a shirt recolored to match different hair, eye, and skin tones. The hair, skin, eyes, and lips of the 3D person model were manually quantized to a single color; the resulting texture atlas functions as a recolorable pattern template. Fixing the colors of the hair, skin, eyes, and lips constrains the inference process to produce suitable colorings for a person with those physical attributes.
 %It should be possible to apply a similar procedure to photographic images, though those inputs may require an intrinsic image decomposition to separate shading from reflectance~\cite{IntrinsicImages}.
-
-\begin{figure}[h!]
-\centering
-\includegraphics[width=\columnwidth]{figs/fashion/composite}
-\caption{Using our model to colorize a patterned shirt for different people. The hair, skin, eye, and lip colors are treated as fixed constraints, which encourage the model to produce compatible colorings via adjacencies and long-range dependencies.}
-\label{fig:fashion}
-\vspace{-1.0em}
-\end{figure}
-
-
-\paragraph{3D scene design}
-Color-coordinating a virtual scene is another creative task that can benefit from computatational support. While repositories such as the 3D Warehouse provide a wealth of object models with which to build scenes, such models are rarely color coordinated with one another. Figure~\ref{fig:sceneRecoloring} shows how our model can make coordinating object colors easier. We can treat a scene as a recolorable pattern by rendering its material coefficients to an image. The user then provides a few additional annotations to specify which object components should be the same color; in this example, cushions, pillows, and wooden objects must take the same color. Finally, we add a factor to our model to enforce that the colors assigned to each component are similar to their original colors (see Equation~\ref{eq:targetFactor}) to keep the system from wandering into physically implausible colorings. The resulting model suggests plausible, improved recolorings of the scene.
-Recent related work transfers material properties from photographs to 3D scenes~\cite{MaterialStyleTransfer}; the objective functions used in this system could be adapted to soft constraints in our framework.
-%Our model's applicability to this task, despite it being trained only on \emph{2D} patterns, suggests that it captures some simple cross-domain aesthetic principles.
 
 
 \subsection{Performance}
@@ -206,8 +187,6 @@ The time required to generate coloring suggestions varies depending on the visua
 
 Real-time coloring suggestions would benefit many of the applications demonstrated in this paper, and there are several avenues for improving the performance of our unoptimized, JVM-based prototype to this end. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}.
 %Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
-
-
 
 \begin{figure*}[ht]
 \begin{tabular}{c|ccc} 
@@ -220,3 +199,19 @@ Original&Recoloring 1&Recoloring 2&Recoloring 3\vspace{0.4em}\\
 \label{fig:sceneRecoloring}
 \vspace{-1.0em}
 \end{figure*}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=\columnwidth]{figs/webpageRecoloring}
+\caption{With a few additional factors, our model can recolor the background pattern of a web page to match the colors in the page body.}
+\label{fig:webpageRecoloring}
+\vspace{-1.0em}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=\columnwidth]{figs/fashion/composite}
+\caption{Using our model to colorize a patterned shirt for different people. The hair, skin, eye, and lip colors are treated as fixed constraints, which encourage the model to produce compatible colorings via adjacencies and long-range dependencies.}
+\label{fig:fashion}
+\vspace{-1.0em}
+\end{figure}
