Fixing typos, figure refs in acknowledgements, thumbnail supplementals

--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -47,7 +47,7 @@ Figure~\ref{fig:binaryHistograms} shows predicted distributions over relative li
 {\raisebox{2.5em}{\includegraphics[width=.25\columnwidth]{figs/histograms/fb}}}&\includegraphics[width=.60\columnwidth]{figs/histograms/foregroundBackgroundAdjacencyHistogram-small}\vspace{0.5em}\\
 \end{tabular}
 
-\caption{Predicted distributions over relative lightness for two different segment adjacencies (participating segments higlighted in orange and green). A value of 0 indicates identical lightness. The foreground-foreground distribution permits more similar lightness values than the foreground-background disribution.}
+\caption{Predicted distributions over relative lightness for two different segment adjacencies (participating segments higlighted in orange and green). A value of 0 indicates identical lightness. The foreground-foreground distribution permits more similar lightness values than the foreground-background distribution.}
 \label{fig:binaryHistograms}
 \vspace{-1.0em}
 \end{figure}
