--- a/latex/siggraph2013/unary.tex
+++ b/latex/siggraph2013/unary.tex
@@ -27,7 +27,7 @@ Distinctive spatial features of a color group, as well as the spatial features o
 	\item[Relative Sizes] The area occupied by the group divided by the total area of the pattern, and the area divided by the maximum group area in the template.
   \item[Segment Spread] The 2D covariance matrix of the group's segment centroids. This feature captures whether the group is concentrated in one section of the pattern or spread across the whole pattern.
   \item[Segment Size Statistics] The minimum, maximum, mean, and standard deviation of the sizes of segments within the group.
-  \item[Number of Segments] The number of segments in the group divided by the total number of segments in the image
+  \item[Number of Segments] The number of segments in the group divided by the total number of segments in the image.
 \end{description}
 %%
 We also consider the following features for individual segments within a color group:
